Change hashing impl